# bayesian-continuous

./: .gitignore  README.md  data.py  experiment.ipynb  gridsearch.ipynb  pyproject.toml  reporting.py  training.py
report/: build.sh  faikrmod3.bib  main.out  main.tex
slides/: faikrmod3.bib  main.tex
